# Hypercore

./: .gitignore  Makefile  README.md  ceph.conf  data.md  package-lock.json  run.sh
bootloader/: Cargo.toml
data/: Makefile  data.md  enable_vmx.c  hypervisor.c  req.sh  req.txt  vmx.h
hypercore/: data.md  logs.txt  token.txt
hypercore-gui/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
hypercore-gui/src/main/: cephStorage.js  main.js  main.ts  preload.ts  sharedStorage.js
hypercore-gui/src/main/services/: MonitoringService.ts
hypercore-gui/src/renderer/: App.tsx  index.tsx
hypercore-gui/src/renderer/components/: FileDialog.tsx  ResourceMonitor.tsx  SharedFolderDialog.tsx  StyledMenu.tsx  SystemMonitor.tsx
hypercore-gui/src/renderer/types/: global.d.ts
rustCore/: Cargo.toml  build.rs
rustCore/bootloader/: Cargo.toml
rustCore/bootloader/src/: main.rs
rustCore/src/: .Module.symvers.cmd  .enable_vmx.ko.cmd  .enable_vmx.mod.cmd  .enable_vmx.mod.o.cmd  .enable_vmx.o.cmd  .modules.order.cmd  Makefile  ceph.rs  devices.rs  enable_vmx.ko  enable_vmx.mod  enable_vmx.mod.c  graphics.rs  gui.rs  interrupts.rs  lib.rs  main.rs  memory.rs  network.rs  shell.rs  tests.rs  vmx.rs
rustCore/src/memory/: lru.rs  manager.rs  mod.rs  paging.rs
rustCore/src/net/: bluetooth.rs  ethernet.rs  mod.rs  pci.rs  uart.rs  usb.rs  wifi.rs
rustCore/src/process/: manager.rs  mod.rs  scheduler.rs
rustCore/src/storage/: block_devices.rs  mod.rs  ramdisk.rs
