[workspace]
members = [
    ".",
    "bootloader"
]

[package]
name = "rustCore"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bootloader = "0.11.6"
x86_64 = "0.14.2"
volatile = "0.4.1"
spin = "0.9.2"
uart_16550 = "0.2.0"
lazy_static = "1.4.0"
uefi = "0.25"
uefi-services = "0.22"
ceph-rust = "0.5"

[dev-dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = ["bootloader"]
bootloader = []
graphics = []
